fixing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ span {
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 550px) {
   #container img{
     width:calc(100hh);
   }
@@ -271,6 +271,17 @@ span {
 
 }
 
+@media (max-width: 550px) {
+  .boardtext {
+    margin: 0 0 7% 0;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 56px;
+    font-family: "Philosopher", sans-serif;
+    color: white;
+  }
+
+}
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
